# mdopt

./: README.rst  pyproject.toml  setup.py  test.md
mdopt/: __init__.py  mdopt.py
tests/: test_mdopt.py
