[tool.poetry]
name = "mdopt"
version = "0.1.0"
description = ""
authors = ["LasIonfuNans <lasionfunans@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pytest = "6.2.5"
pip = "22.2.1"

[tool.poetry.dev-dependencies]
pytest = ">=5.2, <6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
