[tool.poetry]
name = "mdopt"
version = "0.1.0"
description = ""
authors = ["LasIonfuNans <lasionfunans@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pip = "22.2.1"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
